# olympus

./: CMakeLists.txt  CMakePresets.json  README.md  action.yml  prj.conf
.github/workflows/: Olympus.yml  c-cpp.yml
boards/DB/B01/: B01_nrf5340_cpuapp.dts  B01_nrf5340_cpuapp.yml  B01_nrf5340_cpuapp_ns.dts  B01_nrf5340_cpuapp_ns.yml  B01_nrf5340_cpunet.dts  B01_nrf5340_cpunet.yml  Kconfig.B01  Kconfig.defconfig  board.cmake  board.yml
boards/DB/B02/: B02_nrf54l15_cpuapp.dts  B02_nrf54l15_cpuapp.yml  Kconfig.B02  Kconfig.defconfig  board.yml
boards/Devkits/53Devkit/: nrf5340dk.dts  pins.dtsi  sensor.conf  sensor.dts
boards/Devkits/54Devkit/: nrf54l15dk.dts  sensor.conf  sensor.dts
boards/forge/rev1/: Kconfig.defconfig  Kconfig.rev1  board.yml  forge.conf  forge.dts  rev1-pinctrl.dtsi  rev1_nrf54l15_cpuapp.dts  rev1_nrf54l15_cpuapp.yml  (+4 more)
common/: errorCode.cpp  errorCode.h
components/BLE/: BLE.cpp  BLE.h  CMakeLists.txt
components/LED/: CMakeLists.txt  LED.cpp  LED.h
components/PPG/: CMakeLists.txt  PPG.cpp  PPG.h
components/accelerometer/: CMakeLists.txt  accelerometer.cpp  accelerometer.h
components/boost/: CMakeLists.txt  boost.cpp  boost.h
components/flashbuffer/: CMakeLists.txt  flashbuffer.cpp  flashbuffer.h
components/heartrate/: CMakeLists.txt  heartrate.cpp  heartrate.h
components/ppg_processor/: CMakeLists.txt  ppg_processor.c  ppg_processor.h
components/ringbuffer/: CMakeLists.txt  ringbuffer.cpp  ringbuffer.h
components/stepCounter/: CMakeLists.txt  stepCounter.cpp  stepCounter.h
configs/: ble.conf  sensor.conf
src/: main.cpp
